[gd_scene load_steps=7 format=3 uid="uid://dyeudd0qx70jm"]

[ext_resource type="Script" uid="uid://bf0kril80bfjt" path="res://scripts/options.gd" id="1_e6vpq"]
[ext_resource type="Texture2D" uid="uid://dp5osb87le1n5" path="res://assets/sprites/options/options_minus_0.png" id="1_kv8mn"]
[ext_resource type="Texture2D" uid="uid://cvw5pr8kgmdtu" path="res://assets/sprites/options/options_minus_1.png" id="2_1sggn"]
[ext_resource type="Texture2D" uid="uid://dtapsvlplmj0n" path="res://assets/sprites/options/options_plus_0.png" id="3_e6vpq"]
[ext_resource type="Texture2D" uid="uid://sep1k8i8fgfn" path="res://assets/sprites/options/options_plus_1.png" id="4_o7i7e"]
[ext_resource type="Texture2D" uid="uid://dghggntlkerts" path="res://assets/sprites/options/optionbar_05.png" id="6_o7i7e"]

[node name="options_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e6vpq")

[node name="volume_minus" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -416.0
offset_top = -140.0
offset_right = -408.0
offset_bottom = -132.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(12, 12)
texture_normal = ExtResource("1_kv8mn")
texture_hover = ExtResource("2_1sggn")

[node name="volume_plus" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 284.0
offset_top = -140.0
offset_right = 292.0
offset_bottom = -132.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(12, 12)
texture_normal = ExtResource("3_e6vpq")
texture_hover = ExtResource("4_o7i7e")

[node name="volumebar" type="Area2D" parent="."]
position = Vector2(560, 232)
scale = Vector2(12, 12)

[node name="volumebar_sprite" type="Sprite2D" parent="volumebar"]
texture = ExtResource("6_o7i7e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="volumebar"]

[connection signal="pressed" from="volume_minus" to="." method="_on_volume_minus_pressed"]
[connection signal="pressed" from="volume_plus" to="." method="_on_volume_plus_pressed"]
